--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.cloud.config.profile=${PROFILE:dev}
 spring.application.name=pasivoahorro
 #http://localhost:8084/webjars/swagger-ui/index.html
+
+spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
+spring.kafka.topic.productclient.name=my_topic_productclient
+spring.kafka.topic-transaction.name=my_topic_transaction
